# FIT_MIT_projects

./: .gitignore  .gitmodules  CMakeLists.txt
BIO/: README.md
BMS1/: .gitignore  CMakeLists.txt  README.md  it_is_ok.sh
BMS1/src/: Application.cpp  Application.h  BTSInfo.cpp  BTSInfo.h  CMakeLists.txt  CSVParser.cpp  CSVParser.h  GPSCoordinate.cpp  GPSCoordinate.h  HataModel.cpp  HataModel.h  Location.cpp  Location.h  Makefile  UTM.h  UTMWrapper.cpp  UTMWrapper.h  main.cpp
BMS1/test/: ApplicationTest.cpp  CMakeLists.txt  CSVParserTest.cpp  GPSCoordinateTest.cpp  HataModelTest.cpp  LocationTest.cpp  UTMWrapperTest.cpp
BMS1/test/csv/: 02.csv  04.csv
BMS2/: .gitignore  CMakeLists.txt  README.md
BMS2/src/: AbstractModulator.cpp  AbstractModulator.h  CMakeLists.txt  Demodulator.cpp  Demodulator.h  Makefile  Modulator.cpp  Modulator.h  ModulatorException.cpp  ModulatorException.h  bms2A.cpp  bms2B.cpp  it_is_ok.sh  run_tests.sh
BMS2/src/dir_txt/: test38.txt
BMS2/test/: CMakeLists.txt
FLP-examples/: f2.in  file1.input  file1.txt  file2.txt  polsemka.hs  priklady.hs  prolog.pl  prolog_cuts.pl  vlastne_priklady.pl
FLP-examples/cvicenia/: cv1.hs  cv2.hs  cv4.pl  cv5.pl  cv6.pl
FLP1/: .gitignore  Makefile  readme.md  simplify-bkg.hs
FLP2/: Makefile  README  rubik.pl  test2.in  test3.in  test4.in  test5.in
HSC/segmentace/: Makefile  README.md  project.xml
IAL1/: torture_me.sh
IAL1/c201/: Makefile  c201-aastandard-test.c  c201-aastandard-test.output  c201-advanced-test.c  c201-advanced-test.output  c201.c  c201.h
IAL1/c203/: Makefile  c203-aastandard-test.c  c203-aastandard-test.output  c203-advanced-test.c  c203-advanced-test.output  c203.c  c203.h
IAL1/c206/: Makefile  c206-aastandard-test.c  c206-aastandard-test.output  c206-advanced-test.c  c206-advanced-test.output  c206-advanced-test2.c  c206-advanced-test2.output  c206.c  c206.h
IAL2/c016/: c016-advanced-test.c  c016-test.c  c016.c  c016.h
IAL2/c401/: c401-advanced-test.c  c401-test.c  c401-test.output  c401.c  c401.h
IAL2/c402/: c402-advanced-test.c  c402-test.c  c402.c
ICP/: Makefile  READMI.txt  TODO  board.cpp  board.h  cli.cpp  cli.h  game.cpp  game.h  main.cpp  player.cpp  player.h
ICP/core/: Makefile  Strategy.cpp  cli  cli.cpp  hf  ss  test.cpp
ICP/examples/: Othello Game - Hra ID:0 ~ 6x6 Hráč vs Hráč  Othello Game - Hra ID:0 ~ 8x8 Hráč vs PC  Othello Game - Hra ID:1 ~ 8x8 Hráč vs Hráč  Othello Game - Hra ID:3 ~ 6x6 Hráč vs PC
ICP/new/: GameBoard.cpp  GameBoard.h  GameData.cpp  GameData.h  GameManager.cpp  GameManager.h  Makefile  Player.cpp  Player.h  Strategy.cpp  Strategy.h  cli.cpp  cli.h  haha  main.cpp  mojahra  pepe  pepe1  pepe2  test
ICP/src/: .gitignore  doxygen.conf  merlin.sh
IIS/: .gitignore  composer.json  doc.html  import.json  readme.md  sitemap.txt  xtisov00_xnecas24.sql
IIS/app/: AccessListFactory.php  bootstrap.php
IIS/www/: .htaccess
IMP/doc/: literatura.bib  manual.tex
IMP/fit_noviny/: project.xml
IMS/: .gitignore  Makefile  example.output  supermarket.cpp
IOS1/: readme.md  wedi
IOS2/: Makefile  h2o.c  readme.md
IPK1/: Makefile  cl  test.sh  webclient.cpp
IPK2/: Makefile  README  client.cpp  common.cpp  common.h  server.cpp  test.sh  zip.sh
IPK2/Dokumentace/: Diagram1.eps  Makefile  dokumentace.tex
IPP/: c.c  cls.php  cls2.php  cpp.cpp  delta.xml  dokumentace.tex  export_clean.sh  out.xml  test.c  test.input  test.sh  test.xml
IPP/testy-cls/: _stud_tests.sh  test12.in  test13.in  test14.in  test15.in  test16.in  test17.in  test18.in  test20.in  test21.in  test22.in  test23.in  test24.in  test25.in  test26.in  test27.in
IPP2/: csv.py  csv_options  dokumentace.tex  export_clean.sh  test.sh
IPP2/testy/: fituska2.csv  fituska3.csv  test06.csv
ISA/: ArgumentParser.cpp  ArgumentParser.h  ArgumentValidator.cpp  ArgumentValidator.h  CMakeLists.txt  GenericLayerMessage.cpp  GenericLayerMessageFactory.cpp  GenericLayerMessageFactory.h  LayerMessage.cpp  LayerMessage.h  LayerMessageFactory.h  LinkLayerMessageFactory.cpp  LinkLayerMessageFactory.h  Makefile  NetworkLayerMessageFactory.cpp  NetworkLayerMessageFactory.h  Option.h  PcapReader.h  PcapReaderFromFile.cpp  PcapReaderFromFile.h  PcapReaderFromVector.cpp  PcapReaderFromVector.h  README  README.md  Statistics.cpp  Statistics.h  TransportLayerMessageFactory.cpp  TransportLayerMessageFactory.h  compile.sh  main.cpp  test.sh  xtisov00.tar
ISA/doc/: .gitignore  Makefile  literatura.bib  manual.tex
ISA/pcap/: petoTraffic.pcap  peto_ipv6andhop.pcapng  (+3 more)
ISA2/: .gitignore  ArgumentParser.cpp  ArgumentParser.h  ArgumentValidator.cpp  ArgumentValidator.h  CMakeLists.txt  LayerMessage.cpp  LayerMessage.h  Option.h  PcapReader.cpp  PcapReader.h  Statistics.cpp  Statistics.h  binfile  clean.sh  main.cpp
ISA2/pcap/: ipv6test2.pcap
ISJ/: Makefile  doc.tex  forum.py  twitter.py
IZG/: student.c  student.h
IZP1/: Makefile  proj1.c  readme.md
IZP2/: Makefile  proj2.c  readme.md
IZP3/: Makefile  proj3.c  readme.md
KKO/: .gitignore  CMakeLists.txt  it_is_ok.sh  run_tests.sh
KKO/src/: CMakeLists.txt  Makefile  gif2bmp.c  gif2bmp.h  main.c
KKO/test/: CMakeLists.txt  gif2bmpTest.cpp
KRY1/: solution.py  solution_sat.py
KRY2/: Makefile  eliptic_curve.py  test.sh
PDS/: .gitignore  CMakeLists.txt  ClientMessage.cpp  ClientMessage.h  ClientMessages.cpp  ClientMessages.h  Common.cpp  Common.h  DHCPMsg.cpp  DHCPMsg.h  Makefile  PcapUtil.cpp  PcapUtil.h  ServerMessage.cpp  ServerMessage.h  Util.cpp  Util.h  main.cpp  pds-dhcprogue.cpp  pds-dhcpstarve.cpp
PIS/: README.md
PP1/: fitthesis.cls  projekt-01-kapitoly-chapters.tex  projekt-20-literatura-bibliography.bib  projekt.tex
PRL1/: .gitignore  mss.cpp  test.py  test.sh  test_time.sh
PRL2/: .gitignore  CMakeLists.txt  fast_test.sh  pro.cpp  proKL.cpp  run_rest.sh  test.sh  time_test.sh
SEN/: fingerPrint.py  fingerPrintScheme.sch
SEN/src/: AdafruitFingerPrint.cpp  AdafruitFingerPrint.h  CMakeLists.txt
SEN/test/: AdafruitFingerPrintTest.cpp  CMakeLists.txt
common/: CMakeLists.txt  TapOutputter.cpp  TapOutputter.h  test.cpp
(+253 files in other folders)
